--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-
+        <img src="assets/img/logo.svg" alt="Logo da comunidade Ballerini">
+        <nav>
+            <a href="#">Comunidade Ballerini</a>
+            <a href="#">Tutorial</a>
+            <a href="#">Open Source</a>
+            <a href="#">Comandos</a>
+        </nav>
     </header>
     <main>
 
