Add footer content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </main>
     <footer>
-        
+        <img src="assets/img/ballerini.svg" alt="Imagem do rodapé">
     </footer>
 </body>
 </html>
