--- a/index.html
+++ b/index.html
@@ -6,35 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que irá moderar e deixar a sua comunidade segura de um jeito fácil!">
     <title>Balle Bot - Modere a sua comunidade do Discord</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="assets/img/logo.svg" alt="Logo da comunidade Ballerini">
-        <nav>
-            <a href="#">Comunidade Ballerini</a>
-            <a href="#">Tutorial</a>
-            <a href="#">Open Source</a>
-            <a href="#">Comandos</a>
+    <header class="header">
+        <img class="image-header" src="assets/img/logo.svg" alt="Logo da comunidade Ballerini">
+        <nav class="menu-header">
+            <a class="menu-header-item" href="#">Comunidade Ballerini</a>
+            <a class="menu-header-item" href="#">Tutorial</a>
+            <a class="menu-header-item" href="#">Open Source</a>
+            <a class="menu-header-item" href="#">Comandos</a>
         </nav>
     </header>
-    <main>
-        <section>
-            <div>
-                <h1>Balle Bot</h1>
-                <h2>Deixe a sua comunidade segura de um jeito fácil</h2>
-                <button>Me adicione!</button>
+    <main class="content">
+        <section class="main-content">
+            <div class="main-content-written">
+                <h1 class="main-content-written-title">Balle Bot</h1>
+                <h2 class="main-content-written-subtitle">Deixe a sua comunidade segura de um jeito fácil</h2>
+                <button class="main-content-written-button">Me adicione!</button>
             </div>
-            <img src="assets/img/ballebot.svg" alt="Imagem da Balle Bot">
+            <img class="main-content-image" src="assets/img/ballebot.svg" alt="Imagem da Balle Bot">
         </section>
-        <section>
-            <h3>O que ela faz por você?</h3>
-            <p>1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
-            <p>2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
-            <p>3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
+        <section class="secondary-content">
+            <h3 class="secondary-content-title">O que ela faz por você?</h3>
+            <p class="secondary-content-paragraph">1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
+            <p class="secondary-content-paragraph">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
+            <p class="secondary-content-paragraph">3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
         </section>
     </main>
-    <footer>
-        <img src="assets/img/ballerini.svg" alt="Imagem do rodapé">
+    <footer class="footer">
+        <img class="image-footer" src="assets/img/ballerini.svg" alt="Imagem do rodapé">
     </footer>
 </body>
 </html>
